<resources>
    <string name="app_name">CMP2004</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="click_to_login">Click to login</string>
    <string name="click_to_register">Click to register</string>
    <string name="logout">Logout</string>
    <string name="questions_left">Questions Left</string>
    <string name="answerA">answerA</string>
    <string name="answerB">answerA</string>
    <string name="answerC">answerA</string>
    <string name="answerD">answerA</string>
    <string name="analogQuestion">Choose the corresponding time</string>
    <string name="memorize_the_numbers_in_forward_order">Memorize the numbers in forward order</string>
    <string name="answer_here_seperated_by_commas_i_e_1_2_3">Answer here separated by spaces (i.e. 1 2 3)</string>
</resources>