<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_200"
    android:padding="24dp"
    tools:context=".AnalogClock">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/questionsLeft"
        android:textSize="20sp"
        android:text="@string/questions_left"
        android:layout_centerHorizontal="true"/>


    <ImageView
        android:layout_width="167dp"
        android:layout_height="156dp"
        android:layout_below="@+id/questionsLeft"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="120dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="124dp"
        android:id="@+id/analogImage"
        android:src="@drawable/analog1" />

    <TextView
        android:id="@+id/question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/choices_layout"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/analogQuestion"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="23sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:id="@+id/choices_layout"
        android:orientation="vertical">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:backgroundTint="@color/white"
            android:id="@+id/ans_A"
            android:text="@string/answerA"
            android:textColor="@color/black"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:backgroundTint="@color/white"
            android:id="@+id/ans_B"
            android:text="@string/answerB"
            android:textColor="@color/black"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:backgroundTint="@color/white"
            android:id="@+id/ans_C"
            android:text="@string/answerC"
            android:textColor="@color/black"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:backgroundTint="@color/white"
            android:id="@+id/ans_D"
            android:text="@string/answerD"
            android:textColor="@color/black"/>

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/submit_btn"
        android:text="SUBMIT"
        android:layout_below="@id/choices_layout"
        android:layout_marginTop="40dp"/>





</RelativeLayout>